<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.mtw.rkj.articlemanager.presentation.activities.ArticleActivity">

    <item
        android:id="@+id/action_add"
        android:icon="@android:drawable/ic_input_add"
        android:orderInCategory="100"
        android:title="@string/action_add"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_delete"
        android:icon="@android:drawable/ic_menu_delete"
        android:orderInCategory="90"
        android:title="@string/action_delete"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_save"
        android:icon="@android:drawable/ic_menu_save"
        android:orderInCategory="80"
        android:title="@string/action_save"
        app:showAsAction="never" />
</menu>