<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="4dp"
    android:paddingTop="4dp">

    <android.support.v7.widget.CardView
        android:id="@+id/view_foreground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <ImageView
                android:id="@+id/article_image"
                android:layout_width="@dimen/thumbnail_small_width"
                android:layout_height="@dimen/thumbnail_small_height"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="8dp"
                app:srcCompat="@drawable/no_image" />

            <TextView
                android:id="@+id/article_barcode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:text="@string/article_barcode"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/article_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@id/article_image"
                android:text="@string/article_name"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/favourite_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/article_barcode"
                android:layout_marginTop="8dp"
                android:background="@null"
                app:srcCompat="@android:drawable/star_big_on" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/article_name"
                android:layout_toEndOf="@id/article_image"
                android:layout_toStartOf="@id/favourite_button"
                android:layout_marginEnd="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/article_description"
                        android:layout_width="match_parent"
                        android:layout_height="fill_parent"
                        android:maxLines="1"
                        android:text="@string/article_description"
                        android:textSize="12sp"
                        android:textStyle="italic" />
                </LinearLayout>
            </ScrollView>
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <RelativeLayout
        android:id="@+id/view_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="8dp"
            android:background="@null"
            android:clickable="false"
            app:srcCompat="@android:drawable/ic_menu_delete" />

        <ImageButton
            android:id="@+id/edit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="8dp"
            android:layout_toStartOf="@id/delete_button"
            android:background="@null"
            android:clickable="false"
            app:srcCompat="@android:drawable/ic_menu_edit" />
    </RelativeLayout>
</FrameLayout>